mostly working need to fix fb button not showing ;

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -3,7 +3,7 @@
    Everything is centered and in white. */
 
 body {
-    background: #333 url("/static/img/IMG_8398.jpg");
+    background: #333 url("/static/img/US_Capitol_west_side.jpg");
     background-size: cover;
 
     color: white;
